--- a/AboutMeApp/Base.lproj/Main.storyboard
+++ b/AboutMeApp/Base.lproj/Main.storyboard
@@ -17,20 +17,20 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="Egc-9o-cce">
-                                <rect key="frame" x="20" y="259" width="353" height="181.66666666666663"/>
+                                <rect key="frame" x="30" y="303.33333333333331" width="333" height="181.66666666666669"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CBg-U5-g9V">
-                                        <rect key="frame" x="0.0" y="0.0" width="353" height="34"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="333" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tgd-Mj-SDO">
-                                        <rect key="frame" x="0.0" y="50" width="353" height="34"/>
+                                        <rect key="frame" x="0.0" y="50" width="333" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" secureTextEntry="YES" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3GW-ZR-zs6">
-                                        <rect key="frame" x="0.0" y="100" width="353" height="35.666666666666657"/>
+                                        <rect key="frame" x="0.0" y="100" width="333" height="35.666666666666657"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="filled" title="Log In">
                                             <fontDescription key="titleFontDescription" type="system" pointSize="18"/>
@@ -40,7 +40,7 @@
                                         </connections>
                                     </button>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="WbM-Lh-BEY">
-                                        <rect key="frame" x="0.0" y="151.66666666666669" width="353" height="30"/>
+                                        <rect key="frame" x="0.0" y="151.66666666666669" width="333" height="30"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Kwf-fI-ATC">
                                                 <rect key="frame" x="0.0" y="0.0" width="133" height="30"/>
@@ -60,7 +60,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4e1-rm-We0">
-                                                <rect key="frame" x="230" y="0.0" width="123" height="30"/>
+                                                <rect key="frame" x="210" y="0.0" width="123" height="30"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                 <state key="normal">
                                                     <attributedString key="attributedTitle">
@@ -84,9 +84,11 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="Egc-9o-cce" secondAttribute="trailing" constant="20" id="5Wj-EI-f50"/>
-                            <constraint firstItem="Egc-9o-cce" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="7uK-AZ-6Yd"/>
-                            <constraint firstItem="Egc-9o-cce" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="200" id="Bhn-eP-72x"/>
+                            <constraint firstItem="Egc-9o-cce" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Gx8-Ty-sol">
+                                <variation key="heightClass=regular-widthClass=compact" constant="-32"/>
+                            </constraint>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Egc-9o-cce" secondAttribute="trailing" constant="30" id="SB4-go-iNC"/>
+                            <constraint firstItem="Egc-9o-cce" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="bkk-6T-uhZ"/>
                         </constraints>
                     </view>
                     <connections>
