--- a/AboutMeApp/Storyboards/Base.lproj/Main.storyboard
+++ b/AboutMeApp/Storyboards/Base.lproj/Main.storyboard
@@ -171,8 +171,8 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="SIB-uE-vGQ">
                                 <rect key="frame" x="16" y="396" width="361" height="240"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="33" translatesAutoresizingMaskIntoConstraints="NO" id="jTY-Dj-Yco">
-                                        <rect key="frame" x="0.0" y="0.0" width="125" height="24"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="jTY-Dj-Yco">
+                                        <rect key="frame" x="0.0" y="0.0" width="108" height="24"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Имя:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NfM-Qh-X2d">
                                                 <rect key="frame" x="0.0" y="0.0" width="44" height="24"/>
@@ -181,15 +181,15 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LW6-xZ-GOg">
-                                                <rect key="frame" x="77" y="0.0" width="48" height="24"/>
+                                                <rect key="frame" x="60" y="0.0" width="48" height="24"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="33" translatesAutoresizingMaskIntoConstraints="NO" id="6QK-aQ-7fI">
-                                        <rect key="frame" x="0.0" y="54" width="170.66666666666666" height="24"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="6QK-aQ-7fI">
+                                        <rect key="frame" x="0.0" y="54" width="153.66666666666666" height="24"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Фамилия:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wb5-hq-Qce">
                                                 <rect key="frame" x="0.0" y="0.0" width="89.666666666666671" height="24"/>
@@ -198,15 +198,15 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wxQ-zB-VZZ">
-                                                <rect key="frame" x="122.66666666666666" y="0.0" width="48" height="24"/>
+                                                <rect key="frame" x="105.66666666666669" y="0.0" width="48" height="24"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="33" translatesAutoresizingMaskIntoConstraints="NO" id="IrQ-iV-lQb">
-                                        <rect key="frame" x="0.0" y="108" width="178" height="24"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="IrQ-iV-lQb">
+                                        <rect key="frame" x="0.0" y="108" width="161" height="24"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Компания:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GjI-qe-95h">
                                                 <rect key="frame" x="0.0" y="0.0" width="97" height="24"/>
@@ -215,15 +215,15 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DuE-RW-d8a">
-                                                <rect key="frame" x="130" y="0.0" width="48" height="24"/>
+                                                <rect key="frame" x="113" y="0.0" width="48" height="24"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="33" translatesAutoresizingMaskIntoConstraints="NO" id="ALQ-1c-s3B">
-                                        <rect key="frame" x="0.0" y="162" width="143.33333333333334" height="24"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="ALQ-1c-s3B">
+                                        <rect key="frame" x="0.0" y="162" width="126.33333333333333" height="24"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Отдел:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TSn-gX-IGj">
                                                 <rect key="frame" x="0.0" y="0.0" width="62.333333333333336" height="24"/>
@@ -232,15 +232,15 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0FY-4s-mqU">
-                                                <rect key="frame" x="95.333333333333329" y="0.0" width="47.999999999999986" height="24"/>
+                                                <rect key="frame" x="78.333333333333329" y="0.0" width="48" height="24"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="33" translatesAutoresizingMaskIntoConstraints="NO" id="0BB-cx-UVT">
-                                        <rect key="frame" x="0.0" y="216" width="189.66666666666666" height="24"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="0BB-cx-UVT">
+                                        <rect key="frame" x="0.0" y="216" width="172.66666666666666" height="24"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Должность:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xI5-0T-AIL">
                                                 <rect key="frame" x="0.0" y="0.0" width="108.66666666666667" height="24"/>
@@ -249,7 +249,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k2U-8d-RA4">
-                                                <rect key="frame" x="141.66666666666666" y="0.0" width="48" height="24"/>
+                                                <rect key="frame" x="124.66666666666666" y="0.0" width="48" height="24"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -258,7 +258,7 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Фото" translatesAutoresizingMaskIntoConstraints="NO" id="1bz-ks-Cve">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1bz-ks-Cve">
                                 <rect key="frame" x="132.66666666666669" y="136" width="147.66666666666669" height="147.66666666666663"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="1bz-ks-Cve" secondAttribute="height" multiplier="1:1" id="eiu-NE-bMe"/>
@@ -284,14 +284,19 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="companyLabel" destination="DuE-RW-d8a" id="g2E-83-kkY"/>
+                        <outlet property="departmentLabel" destination="0FY-4s-mqU" id="wTB-Ns-AOB"/>
                         <outlet property="fotoImageView" destination="1bz-ks-Cve" id="dpH-CX-qkh"/>
+                        <outlet property="jobTitleLabel" destination="k2U-8d-RA4" id="zdF-q4-CMP"/>
+                        <outlet property="nameLabel" destination="LW6-xZ-GOg" id="tJT-kB-DFN"/>
+                        <outlet property="surnameLabel" destination="wxQ-zB-VZZ" id="IUZ-XY-JEK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Uma-02-VTE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2228" y="855"/>
         </scene>
-        <!--Name Bio-->
+        <!--Biography-->
         <scene sceneID="YgW-JC-Si2">
             <objects>
                 <viewController id="OEK-Pk-Tla" customClass="BiographyViewController" customModule="AboutMeApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -299,9 +304,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PUu-Fi-AxX">
-                                <rect key="frame" x="16" y="104" width="361" height="21.666666666666671"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Text" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PUu-Fi-AxX">
+                                <rect key="frame" x="16" y="104" width="361" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -314,7 +319,10 @@
                             <constraint firstItem="PUu-Fi-AxX" firstAttribute="leading" secondItem="fTm-nw-TXz" secondAttribute="leading" constant="16" id="c76-1w-fh4"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Name Bio" id="YjV-8N-c8B"/>
+                    <navigationItem key="navigationItem" title="Biography" id="YjV-8N-c8B"/>
+                    <connections>
+                        <outlet property="biographyLabel" destination="PUu-Fi-AxX" id="19T-u0-wmw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nPe-zs-Ybt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -362,9 +370,8 @@
     <resources>
         <image name="house.fill" catalog="system" width="128" height="104"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
-        <image name="Фото" width="1024" height="1024"/>
         <systemColor name="secondarySystemBackgroundColor">
-            <color red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
